@@ -977,6 +977,14 @@
 				<onclick>ActivateWindow($PARAM[pvr_type]Search)</onclick>
 				<thumb>DefaultAddonsSearch.png</thumb>
 			</item>
+            <item>
+				<label>Scaper wählen</label>
+				<onclick>XBMC.RunScript(plugin.service.gto,action=change_scraper)</onclick>
+				<thumb>newspaper.png</thumb>
+                <visible>Skin.HasSetting(gto_aktiviert)</visible>
+			</item>
+            
+           
 		</content>
 	</include>
 	<include name="WidgetListChannels">
