@@ -132,13 +132,13 @@
 					<onclick>SendClick(28)</onclick>
 					<visible>Window.IsActive(MyPVRChannels.xml) | Window.IsActive(MyPVRGuide.xml)</visible>
 				</control>
-				<control type="radiobutton" id="6060">
+				<!--control type="radiobutton" id="6060">
 					<include>MediaMenuItemsCommon</include>
 					<label>$LOCALIZE[31127]</label>
 					<selected>Control.IsVisible(50)</selected>
 					<onclick>Container.NextViewMode</onclick>
 					<visible>Window.IsActive(MyPVRChannels.xml)</visible>
-				</control>
+				</control-->
 				<control type="button" id="6053">
 					<include>MediaMenuItemsCommon</include>
 					<label>$LOCALIZE[31022]</label>
